Terceiro requisito adicionado

--- a/index.html
+++ b/index.html
@@ -11,5 +11,10 @@
     <header id="cabecalho">
         <h1 id="titulo">Tudo o que aprendi na Trybe</h1>
     </header>
+    <article>
+        <section>
+            <img id="minha_foto" src="public/IMG_20220413_102914_716.jpg" alt="Imagem da Paloma Wink" width="300px">
+        </section>
+    </article>
 </body>
 </html>
