Adicionando quarto requisito

--- a/index.html
+++ b/index.html
@@ -15,6 +15,20 @@
         <section>
             <img id="minha_foto" src="public/IMG_20220413_102914_716.jpg" alt="Imagem da Paloma Wink" width="300px">
         </section>
+        <section>
+            <ol id="licoes_aprendidas">
+                <li>Aprendi que programar pode ser muito divertidos.</li>
+                <li>Respeitar o meu tempo, principalmente o de aprendizado.</li>
+                <li>Não é necessário decorar todos os comandos, basta pesquisar.</li>
+                <li>Nem sempre preciso anotar tudo, focar na aula muda tudo.</li>
+                <li>Basta ler, em 99% dos casos a solução está escrita.</li>
+                <li>Programar precisa de treino.</li>
+                <li>A evolução é diária, hoje sou melhor que ontem e pior do que amanhã.</li>
+                <li>Sou capaz de mais coisas do que imagino.</li>
+                <li>Aprendo muito melhor na prática.</li>
+                <li>O caminho para ser uma desenvolvedora não é fácil, mas não é impossivel</li>
+            </ol>
+        </section>
     </article>
 </body>
 </html>
