Quinto requisito adicionado

--- a/index.html
+++ b/index.html
@@ -29,6 +29,20 @@
                 <li>O caminho para ser uma desenvolvedora não é fácil, mas não é impossivel</li>
             </ol>
         </section>
+        <section>
+            <ul id="licoes_a_aprender">
+                <li>Melhorar minha comunicação.</li>
+                <li>Quero que JS seja minha main stack.</li>
+                <li>Criar um portifólio muito legal e interativo.</li>
+                <li>Deixar meu código cada vez mais limpo.</li>
+                <li>Aprender o máximo possivel.</li>
+                <li>Melhorar meu trabalho em equipe.</li>
+                <li>Servir de exemplo positivo para todos que eu conhecer.</li>
+                <li>Desenvolver os projetos que tenho em mente.</li>
+                <li>Melhorar minha lógica de programação.</li>
+                <li>Melhorar minhas formas de aprendizado.</li>
+            </ul>
+        </section>
     </article>
 </body>
 </html>
