Requisitos seis e sete concluidos, add link para meu perfil linkedin

--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
                 <li>Melhorar minhas formas de aprendizado.</li>
             </ul>
         </section>
+        <a href="http://www.linkedin.com/in/paloma-wink" alt="Perfil Linkedin Paloma Wink" target="_blank">Linkedin</a>
     </article>
+    <footer id="rodape">
+        <h5>Paloma Wink</h5>
+    </footer>
 </body>
 </html>
