Requisitos oito, nove e dez adicionados

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <header id="cabecalho">
         <h1 id="titulo">Tudo o que aprendi na Trybe</h1>
     </header>
-    <article>
         <section>
             <img id="minha_foto" src="public/IMG_20220413_102914_716.jpg" alt="Imagem da Paloma Wink" width="300px">
         </section>
@@ -19,14 +18,14 @@
             <ol id="licoes_aprendidas">
                 <li>Aprendi que programar pode ser muito divertidos.</li>
                 <li>Respeitar o meu tempo, principalmente o de aprendizado.</li>
-                <li>Não é necessário decorar todos os comandos, basta pesquisar.</li>
-                <li>Nem sempre preciso anotar tudo, focar na aula muda tudo.</li>
+                <li>HTML</li>
+                <li>CSS</li>
                 <li>Basta ler, em 99% dos casos a solução está escrita.</li>
                 <li>Programar precisa de treino.</li>
-                <li>A evolução é diária, hoje sou melhor que ontem e pior do que amanhã.</li>
-                <li>Sou capaz de mais coisas do que imagino.</li>
-                <li>Aprendo muito melhor na prática.</li>
-                <li>O caminho para ser uma desenvolvedora não é fácil, mas não é impossivel</li>
+                <li>Unix e Bash</li>
+                <li>Git</li>
+                <li>GitHub</li>
+                <li>HTML semântico</li>
             </ol>
         </section>
         <section>
@@ -44,7 +43,12 @@
             </ul>
         </section>
         <a href="http://www.linkedin.com/in/paloma-wink" alt="Perfil Linkedin Paloma Wink" target="_blank">Linkedin</a>
+    <article>
+        <p>A minha evolução na Trybe é diária, hoje sou melhor que ontem e pior do que amanhã, percebi que sou capaz de mais coisas do que imagino. Aprendo muito melhor na prática, vi que o caminho para ser uma desenvolvedora não é fácil, mas não é impossivel. Pedir ajuda não é errado, mas sempre precisamos pesquisar e ter autonomia para resolver os problemas, muitas vezes a solução do problema está escrito, basta ler!</p>
     </article>
+    <aside>
+        <p>Sou uma pessoa muito alegre e bem humorada, amo estudar, ler, malhar e viajar. Sou gateira de coração ❤️.</p>
+    </aside>
     <footer id="rodape">
         <h5>Paloma Wink</h5>
     </footer>
