Último requisito adicionado

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Projeto Lessons Learned</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -50,7 +50,7 @@
         <p>Sou uma pessoa muito alegre e bem humorada, amo estudar, ler, malhar e viajar. Sou gateira de coração ❤️.</p>
     </aside>
     <footer id="rodape">
-        <h5>Paloma Wink</h5>
+        <h2>Paloma Wink</h2>
     </footer>
 </body>
 </html>
