Começando os requisitos bonus

--- a/index.html
+++ b/index.html
@@ -49,6 +49,24 @@
     <aside>
         <p>Sou uma pessoa muito alegre e bem humorada, amo estudar, ler, malhar e viajar. Sou gateira de coração ❤️.</p>
     </aside>
+    <table>
+        <tr>
+          <th>🐱 Meus gatos</th>
+          <th>Idade</th>
+        </tr>
+        <tr>
+          <td>Black</td>
+          <td>8 anos</td>
+        </tr>
+        <tr>
+          <td>Mel</td>
+          <td>7 anos</td>
+        </tr>
+        <tr>
+          <td>Poppy</td>
+          <td>7 anos</td>
+        </tr>
+    </table>
     <footer id="rodape">
         <h2>Paloma Wink</h2>
     </footer>
