Estilizando a tabla, article e aside

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Marck+Script&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap" rel="stylesheet">
 </head>
 <body>
     <header id="cabecalho">
@@ -45,16 +45,16 @@
                 <li>Melhorar minhas formas de aprendizado.</li>
             </ul>
         </section>
-        <a href="http://www.linkedin.com/in/paloma-wink" alt="Perfil Linkedin Paloma Wink" target="_blank">Linkedin</a>
-    <article>
+        <a href="http://www.linkedin.com/in/paloma-wink" alt="Perfil Linkedin Paloma Wink" target="_blank">Linkedin</a><br>
+    <article class="lado-esquerdo">
         <p>A minha evolução na Trybe é diária, hoje sou melhor que ontem e pior do que amanhã, percebi que sou capaz de mais coisas do que imagino. Aprendo muito melhor na prática, vi que o caminho para ser uma desenvolvedora não é fácil, mas não é impossivel. Pedir ajuda não é errado, mas sempre precisamos pesquisar e ter autonomia para resolver os problemas, muitas vezes a solução do problema está escrito, basta ler!</p>
     </article>
-    <aside>
+    <aside class="lado-direito">
         <p>Sou uma pessoa muito alegre e bem humorada, amo estudar, ler, malhar e viajar. Sou gateira de coração ❤️.</p>
     </aside>
     <table>
         <tr>
-          <th>🐱 Meus gatos</th>
+          <th>Meus gatos 🐱</th>
           <th>Idade</th>
         </tr>
         <tr>
