Finalizando os bonus, colocando aside e article lado a lado

--- a/index.html
+++ b/index.html
@@ -46,12 +46,15 @@
             </ul>
         </section>
         <a href="http://www.linkedin.com/in/paloma-wink" alt="Perfil Linkedin Paloma Wink" target="_blank">Linkedin</a><br>
-    <article class="lado-esquerdo">
-        <p>A minha evolução na Trybe é diária, hoje sou melhor que ontem e pior do que amanhã, percebi que sou capaz de mais coisas do que imagino. Aprendo muito melhor na prática, vi que o caminho para ser uma desenvolvedora não é fácil, mas não é impossivel. Pedir ajuda não é errado, mas sempre precisamos pesquisar e ter autonomia para resolver os problemas, muitas vezes a solução do problema está escrito, basta ler!</p>
-    </article>
-    <aside class="lado-direito">
-        <p>Sou uma pessoa muito alegre e bem humorada, amo estudar, ler, malhar e viajar. Sou gateira de coração ❤️.</p>
-    </aside>
+    <div>
+        <article class="lado-esquerdo">
+            <p>A minha evolução na Trybe é diária, hoje sou melhor que ontem e pior do que amanhã, percebi que sou capaz de mais coisas do que imagino. Aprendo muito melhor na prática, vi que o caminho para ser uma desenvolvedora não é fácil, mas não é impossivel. Pedir ajuda não é errado, mas sempre precisamos pesquisar e ter autonomia para resolver os problemas, muitas vezes a solução do problema está escrito, basta ler!</p>
+        </article>
+        <aside class="lado-direito">
+            <p>Sou uma pessoa muito alegre e bem humorada, amo estudar, ler, malhar e viajar. Sou gateira de coração ❤️.</p>
+        </aside>
+    </div>
+    <br>
     <table>
         <tr>
           <th>Meus gatos 🐱</th>
@@ -70,6 +73,7 @@
           <td>7 anos</td>
         </tr>
     </table>
+    <br>
     <footer id="rodape">
         <h2>Paloma Wink</h2>
     </footer>
