--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </ul>
         </section>
         <a href="http://www.linkedin.com/in/paloma-wink" alt="Perfil Linkedin Paloma Wink" target="_blank">Linkedin</a><br>
-    <div>
+    <div class="textos">
         <article class="lado-esquerdo">
             <p>A minha evolução na Trybe é diária, hoje sou melhor que ontem e pior do que amanhã, percebi que sou capaz de mais coisas do que imagino. Aprendo muito melhor na prática, vi que o caminho para ser uma desenvolvedora não é fácil, mas não é impossivel. Pedir ajuda não é errado, mas sempre precisamos pesquisar e ter autonomia para resolver os problemas, muitas vezes a solução do problema está escrito, basta ler!</p>
         </article>
@@ -54,7 +54,6 @@
             <p>Sou uma pessoa muito alegre e bem humorada, amo estudar, ler, malhar e viajar. Sou gateira de coração ❤️.</p>
         </aside>
     </div>
-    <br>
     <table>
         <tr>
           <th>Meus gatos 🐱</th>
@@ -73,7 +72,6 @@
           <td>7 anos</td>
         </tr>
     </table>
-    <br>
     <footer id="rodape">
         <h2>Paloma Wink</h2>
     </footer>
